--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - gem update --system
 
 script:
-  - bundle exec rubocop app spec -R --format simple
+  - bundle exec rubocop features
 
 cache:
   bundler: true
